# EchoingECG

./: .gitignore  README.md  eval_echoingecg_ecgqa.py  pyproject.toml  requirements.txt
demo/: run_model.ipynb
preprocess/: echoclip.py  extract_echo_labels.py  utils.py
src/configs/: eval.yaml  model.yaml  optimizer.yaml  sampler.yaml  train.yaml  trainer.yaml
src/datasets/: data_factory.py  ecg.py  echo.py  helpers.py  sampler.py
src/loss/: infonce.py  pcmepp.py
src/model/: ecg_encoder.py  echoingecg_model.py  gpo.py  text_encoder.py  utils.py
