[project]
name = "medbind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "accelerate>=1.10.0",
    "av>=15.0.0",
    "beartype>=0.21.0",
    "braceexpand>=0.1.7",
    "decord>=0.6.0",
    "einops>=0.8.1",
    "fire>=0.7.0",
    "ftfy>=6.3.1",
    "h5py>=3.14.0",
    "hydra-core>=1.3.2",
    "iopath>=0.1.10",
    "ipython>=9.4.0",
    "isort>=6.0.1",
    "jupyter>=1.1.1",
    "kernels>=0.9.0",
    "matplotlib>=3.10.5",
    "mypy>=1.17.1",
    "openai-harmony>=0.0.4",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.1",
    "peft>=0.17.0",
    "psutil>=7.0.0",
    "pydicom>=3.0.1",
    "pytorch-lightning>=2.5.2",
    "pyyaml>=6.0.2",
    "ruff>=0.12.8",
    "safetensors>=0.6.2",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.1",
    "tensorboard>=2.20.0",
    "timm>=1.0.19",
    "torch>=2.8.0",
    "torchcodec>=0.6.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.0",
    "wandb>=0.21.1",
]


[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
transformers = { git = "https://github.com/huggingface/transformers.git" }

[tool.ruff]
line-length = 100
target-version = "py313"  # or your Python version
fix = true  # Enables auto-fix

# Enable Ruff rules (or presets) that cover formatting + unused imports
lint.select = [
  "F",     # Pyflakes (e.g. unused imports)
  "E",     # pycodestyle errors
  "I",     # isort (import sorting)
  "W",     # pycodestyle warnings
  "ANN",  # flake8-annotations (missing or incorrect type hints)
  "TCH",  # flake8-type-checking (suggest moving typing imports into TYPE_CHECKING blocks)
  ]

# Optionally: ignore specific rules
# ignore = ["E501"]  # e.g. line too long
# Enable automatic fixing for selected rules
lint.fixable = ["F", "E", "I", "W"]

# Optional: Exclude certain folders
exclude = ["venv", "__pycache__", ".venv"]
[tool.ruff.format]
docstring-code-format = true  # Optional: also format code in docstrings
quote-style = "double"
indent-style = "space"
line-ending = "lf"
